// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Feed /> renders properly 1`] = `
<Paper
  circle={false}
  id="about"
  rounded={true}
  style={
    Object {
      "display": "flex",
      "height": "100vh",
    }
  }
  transitionEnabled={true}
  zDepth={1}
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "column",
        "justifyContent": "flex-start",
      }
    }
  >
    <h1>
      Feed Header
    </h1>
  </View>
</Paper>
`;

exports[`<Feed /> shows feeditems 1`] = `
<Paper
  circle={false}
  id="about"
  rounded={true}
  style={
    Object {
      "display": "flex",
      "height": "100vh",
    }
  }
  transitionEnabled={true}
  zDepth={1}
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "column",
        "justifyContent": "flex-start",
      }
    }
  >
    <h1>
      Feed Header
    </h1>
    <FeedItem
      feedData={
        Object {
          "dest": "la",
          "postTimestamp": 12,
        }
      }
    />
    <FeedItem
      feedData={
        Object {
          "dest": "slo",
          "postTimestamp": 10,
        }
      }
    />
    <FeedItem
      feedData={
        Object {
          "dest": "sf",
          "postTimestamp": 8,
        }
      }
    />
  </View>
</Paper>
`;

exports[`<Feed /> shows feeditems in proper order 1`] = `
<Paper
  circle={false}
  id="about"
  rounded={true}
  style={
    Object {
      "display": "flex",
      "height": "100vh",
    }
  }
  transitionEnabled={true}
  zDepth={1}
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "column",
        "justifyContent": "flex-start",
      }
    }
  >
    <h1>
      Feed Header
    </h1>
    <FeedItem
      feedData={
        Object {
          "dest": "la",
          "postTimestamp": 12,
        }
      }
    />
    <FeedItem
      feedData={
        Object {
          "dest": "slo",
          "postTimestamp": 10,
        }
      }
    />
    <FeedItem
      feedData={
        Object {
          "dest": "sf",
          "postTimestamp": 8,
        }
      }
    />
  </View>
</Paper>
`;
